--- a/Codea2/app/src/main/res/layout/activity_main.xml
+++ b/Codea2/app/src/main/res/layout/activity_main.xml
@@ -8,41 +8,41 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/jugar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="JUGAR"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/puntajes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/puntajes"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="PUNTAJES"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/cuenta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/jugar" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/cuenta"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="MI CUENTA"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintBottom_toTopOf="@+id/mispreguntas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/puntajes" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/mispreguntas"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="MIS PREGUNTAS"
@@ -50,5 +50,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/cuenta" />
 </android.support.constraint.ConstraintLayout>
