--- a/Codea2/app/src/main/res/values/colors.xml
+++ b/Codea2/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#33B9C7</color>
+    <color name="colorAccent">#FFF2A9</color>
+    <color name="Background">#1ABC9C</color>
+    <color name="Jugar">#E74C3C</color>
+    <color name="Puntaje">#4CD137</color>
+    <color name="Mi_Cuenta">#95a5a6</color>
+    <color name="Preguntas">#F1C40F</color>
+    <color name="Video">#3498DB</color>
 </resources>
