--- a/Codea2/app/src/main/res/layout/activity_main.xml
+++ b/Codea2/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/Background"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/jugar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:background="@color/Jugar"
+        android:drawableLeft="@android:drawable/ic_media_play"
+        android:padding="16dp"
         android:text="JUGAR"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#FFFFFF"
+        android:textSize="24dp"
         app:layout_constraintBottom_toTopOf="@+id/puntajes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -23,7 +27,12 @@
         android:id="@+id/puntajes"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:background="@color/Puntaje"
+        android:drawableLeft="@android:drawable/ic_menu_gallery"
+        android:padding="16dp"
         android:text="PUNTAJES"
+        android:textColor="#FFFFFF"
+        android:textSize="24dp"
         app:layout_constraintBottom_toTopOf="@+id/cuenta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -34,7 +43,12 @@
         android:id="@+id/cuenta"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:background="@color/Mi_Cuenta"
+        android:drawableLeft="@android:drawable/ic_menu_manage"
+        android:padding="16dp"
         android:text="MI CUENTA"
+        android:textColor="#FFFFFF"
+        android:textSize="24dp"
         app:layout_constraintBottom_toTopOf="@+id/mispreguntas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -45,10 +59,31 @@
         android:id="@+id/mispreguntas"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:background="@color/Preguntas"
+        android:drawableLeft="@android:drawable/ic_menu_agenda"
+        android:padding="16dp"
         android:text="MIS PREGUNTAS"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#FFFFFF"
+        android:textSize="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/video"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cuenta" />
+
+    <Button
+        android:id="@+id/video"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@color/Video"
+        android:drawableLeft="@android:drawable/ic_menu_slideshow"
+        android:padding="16dp"
+        android:text="VIDEO EXPLICATIVO"
+        android:textColor="#FFFFFF"
+        android:textSize="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mispreguntas" />
 </android.support.constraint.ConstraintLayout>
