Leyendo y creando preguntas parte 2

--- a/Codea2/app/src/main/res/layout/activity_preguntas.xml
+++ b/Codea2/app/src/main/res/layout/activity_preguntas.xml
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewPregunta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="¿SON CSS Y HTML LENGUAJES?"
@@ -94,7 +94,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPregunta"
             app:srcCompat="@drawable/code" />
     </android.support.constraint.ConstraintLayout>
 
