Creando activity para crear preguntas y su funcionalidad

--- a/Codea2/app/src/main/res/values/colors.xml
+++ b/Codea2/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FFF2A9</color>
-    <color name="Background">#1ABC9C</color>
+    <color name="Background">#84F3DD</color>
     <color name="Jugar">#E74C3C</color>
     <color name="Puntaje">#4CD137</color>
     <color name="Mi_Cuenta">#95a5a6</color>
