--- a/Codea2/app/src/main/res/layout/activity_singin_activity.xml
+++ b/Codea2/app/src/main/res/layout/activity_singin_activity.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#FFFFFF"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="24dp"
@@ -18,8 +19,8 @@
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:contentDescription="@string/image"
-            android:minHeight="0dp"
             android:minWidth="0dp"
+            android:minHeight="0dp"
             android:scaleType="fitCenter"
             android:src="@drawable/images" />
 
@@ -56,21 +57,21 @@
             android:textColor="@android:color/black" />
 
         <TextView
-            android:gravity="center"
             android:id="@+id/sign_in_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
             android:background="@null"
+            android:gravity="center"
             android:text="@string/create_a_new_account"
             android:textAllCaps="false"
             android:textSize="15sp" />
 
         <com.google.android.gms.common.SignInButton
-            android:paddingTop="10dp"
             android:id="@+id/sign_in_google"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp" />
 
     </LinearLayout>
 
