--- a/Codea2/app/src/main/res/layout/activity_singup_activity.xml
+++ b/Codea2/app/src/main/res/layout/activity_singup_activity.xml
@@ -8,10 +8,12 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:animationCache="false"
+        android:background="#00FFFFFF"
         android:orientation="vertical"
         android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:paddingTop="56dp">
+        android:paddingTop="56dp"
+        android:paddingRight="24dp">
 
 
         <!-- Email Label -->
@@ -37,8 +39,8 @@
             android:id="@+id/btn_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:text="Create Account" />
 
