--- a/Codea2/app/src/main/res/layout/activity_preguntas.xml
+++ b/Codea2/app/src/main/res/layout/activity_preguntas.xml
@@ -124,9 +124,9 @@
     </android.support.constraint.ConstraintLayout>
 
     <TextView
-        android:id="@+id/puntos"
-        android:layout_width="30dp"
-        android:layout_height="39dp"
+        android:id="@+id/TextViewPuntos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
