Se agrega la informacion (nombre, correo, edad...) de usuarios (sesiones)

--- a/Codea2/app/src/main/res/layout/activity_crear_pregunta.xml
+++ b/Codea2/app/src/main/res/layout/activity_crear_pregunta.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Background"
+    android:background="#1abc9c"
     tools:context=".crearPregunta">
 
     <TableLayout
@@ -189,8 +189,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="crear"
         android:background="@color/Jugar"
+        android:text="crear"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.81"
