--- a/Codea2/app/src/main/res/layout/content_mis_preguntas.xml
+++ b/Codea2/app/src/main/res/layout/content_mis_preguntas.xml
@@ -8,4 +8,24 @@
     tools:context=".misPreguntas"
     tools:showIn="@layout/activity_mis_preguntas">
 
+    <LinearLayout
+        android:id="@+id/layoutMP"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"></LinearLayout>
+
+    <Button
+        android:id="@+id/buttonMP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Ver preguntas"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
