--- a/Codea2/app/src/main/res/layout/app_bar_act02.xml
+++ b/Codea2/app/src/main/res/layout/app_bar_act02.xml
@@ -28,6 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="#FFFFFF"
+        app:fabSize="auto"
+        app:maxImageSize="@android:dimen/app_icon_size"
+        app:srcCompat="@drawable/candadoclose" />
 
 </android.support.design.widget.CoordinatorLayout>
