--- a/Codea2/app/src/main/res/layout/activity_crear_pregunta.xml
+++ b/Codea2/app/src/main/res/layout/activity_crear_pregunta.xml
@@ -189,8 +189,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/Puntaje"
         android:text="crear"
-        android:background="@color/Jugar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.81"
