--- a/Codea2/app/src/main/res/layout/activity_singup_activity.xml
+++ b/Codea2/app/src/main/res/layout/activity_singup_activity.xml
@@ -9,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:animationCache="false"
-        android:background="#00FFFFFF"
+        android:background="@color/Background"
         android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingTop="56dp"
