--- a/Codea2/app/src/main/res/menu/principal.xml
+++ b/Codea2/app/src/main/res/menu/principal.xml
@@ -2,8 +2,6 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Mi cuenta"
+    <item android:title="Salir"
         android:id="@+id/item1" />
-    <item android:title="Puntajes"
-        android:id="@+id/item2" />
 </menu>
