--- a/Codea2/app/src/main/res/layout/content_mis_preguntas.xml
+++ b/Codea2/app/src/main/res/layout/content_mis_preguntas.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Puntaje"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".misPreguntas"
     tools:showIn="@layout/activity_mis_preguntas">
@@ -12,6 +13,7 @@
         android:id="@+id/layoutMP"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/Puntaje"
         android:orientation="vertical"></LinearLayout>
 
     <Button
