--- a/Codea2/app/src/main/res/layout/content_act02.xml
+++ b/Codea2/app/src/main/res/layout/content_act02.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#009688"
+    android:background="@color/Puntaje"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Act02"
     tools:showIn="@layout/app_bar_act02">
