--- a/Codea2/app/src/main/res/layout/activity_puntajes.xml
+++ b/Codea2/app/src/main/res/layout/activity_puntajes.xml
@@ -7,26 +7,13 @@
     android:background="@color/Background"
     tools:context=".Puntajes">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:text="Ver Puntajes"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dynamic" />
-
     <ListView
         android:id="@+id/dynamic"
         android:layout_width="395dp"
         android:layout_height="547dp"
-        android:background="@color/Puntaje"
+        android:background="#ecf0f1"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
