--- a/Codea2/app/src/main/res/layout/activity_preguntas.xml
+++ b/Codea2/app/src/main/res/layout/activity_preguntas.xml
@@ -11,15 +11,15 @@
         android:id="@+id/r1"
         android:layout_width="370dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="356dp"
         android:background="@color/Jugar"
         android:text="RESPUESTA #1"
         android:textColor="@android:color/white"
         android:textSize="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/r2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contenedor" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/r2"
@@ -31,7 +31,7 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/r3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/r1" />
 
@@ -65,14 +65,15 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/contenedor"
-        android:layout_width="367dp"
-        android:layout_height="279dp"
+        android:layout_width="355dp"
+        android:layout_height="260dp"
         android:background="#ecf0f1"
         app:layout_constraintBottom_toTopOf="@+id/r1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.212">
 
         <TextView
             android:id="@+id/textViewPregunta"
@@ -125,22 +126,23 @@
 
     <TextView
         android:id="@+id/TextViewPuntos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="16dp"
+        android:layout_height="34dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:text="0"
         android:textColor="#EC0C13"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/r1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.129"
+        app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/contenedor"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView7"
@@ -148,6 +150,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
@@ -156,8 +159,10 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/r1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.266"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.197"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contenedor"
+        app:layout_constraintVertical_bias="0.0" />
 
 
     <Button
@@ -176,7 +181,7 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintHorizontal_bias="0.32"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
