--- a/Codea2/app/src/main/res/layout/activity_puntajes.xml
+++ b/Codea2/app/src/main/res/layout/activity_puntajes.xml
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:layout_marginBottom="8dp"
-        android:text="Ver en Navegador"
+        android:background="#00BCD4"
+        android:text="Puntajes Generales"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
