--- a/Codea2/app/src/main/res/layout/activity_crear_pregunta.xml
+++ b/Codea2/app/src/main/res/layout/activity_crear_pregunta.xml
@@ -213,7 +213,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="#1D7910"
+                android:background="@color/Jugar"
                 android:text="crear" />
         </LinearLayout>
     </ScrollView>
